# betpossum

./: .dockerignore  .gitignore  .npmrc  .sops.yaml  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  Taskfile.yml  biome.json  biome.jsonc  docker-compose-dev.yml  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.push.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.githooks/: pre-commit  pre-push
.github/workflows/: pr.yml
bots/: package.json
bots/src/: api.ts  bot.ts  config.ts  keycloak.ts  main.ts  names.ts
clusters/prod/: apps.yaml  image-automation.yaml
docs/: architecture.drawio
e2e/: CLAUDE.md  compose.ts  global-setup.ts  global-teardown.ts  package.json  playwright.config.ts
e2e/tests/: happy-path.spec.ts  league-filter.spec.ts  my-bets.spec.ts  silent-auth.spec.ts  sport-filter.spec.ts
frontend/: .env.example  CLAUDE.md  Dockerfile  Taskfile.yml  components.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  turbo.json  vitest.config.ts
frontend/src/: auth.ts
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/my-bets/: page.tsx
frontend/src/app/runtime-config.js/: route.ts
frontend/src/components/: BetSlip.test.tsx  BetSlip.tsx  BetSlipDrawer.tsx  BetsChart.test.tsx  BetsChart.tsx  BetsTable.test.tsx  BetsTable.tsx  Leaderboard.tsx  LeagueFilterBar.test.tsx  LeagueFilterBar.tsx  MyBets.tsx  Navbar.tsx  OddsBoard.tsx  RecentBets.test.tsx  RecentBets.tsx  SportFilterBar.test.tsx  SportFilterBar.tsx  StatsSummary.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/hooks/: useBalance.ts  useBets.test.ts  useBets.ts  useDashboardFilters.test.ts  useDashboardFilters.ts  useForceTheme.ts  useInsufficientBalanceToast.ts  useLeagues.ts  useOdds.ts  useOddsIndex.ts  useSports.ts  useStats.ts
frontend/src/lib/: api.ts  auth-context.tsx  auth.ts  betDisplay.test.ts  betDisplay.ts  config.ts  keycloak.ts  schemas.ts  sportColor.ts  theme.ts  toaster.ts  websocket.ts
frontend/src/test/: fixtures.ts  render.tsx  setup.ts
frontend/src/types/: index.ts
k8s/: 01-secrets.yaml  10-postgres.yaml  11-keycloak-postgres.yaml  12-rabbitmq.yaml  20-keycloak.yaml  30-core.yaml  40-nginx.yaml  50-ingress.yaml  README.md  seal-secrets.sh
k8s/base/: 00-namespace.yaml  02-config.yaml  13-tigerbeetle.yaml  20-keycloak.yaml  30-core.yaml  31-odds.yaml  32-notifications.yaml  33-stats.yaml  34-bots.yaml  40-nginx.yaml  50-ingress.yaml  kustomization.yaml
k8s/observability/: README.md  alloy.values.yaml  kube-prometheus-stack.local.values.yaml  kube-prometheus-stack.prod.values.yaml  kube-prometheus-stack.values.yaml  loki.values.yaml
k8s/overlays/local/: ingress.yaml  kustomization.yaml  nginx-ingress-values.yaml  secrets.yaml
k8s/overlays/prod/: cluster-issuer.yaml  ingress.yaml  kustomization.yaml  secrets.yaml
keycloak/: CLAUDE.md  Dockerfile  realm.e2e.json  realm.json
keycloak/themes/betpossum/login/: theme.properties
nginx/: CLAUDE.md  config.js.template  nginx.conf  nginx.dev.conf
nginx/docker-entrypoint.d/: 30-render-config.sh
postgres/: init.sql
proto/: CLAUDE.md  events.proto
schemas/: CLAUDE.md  events.schema.json
schemas/json/: events.json  rest.json
services/core/: .env.example  CLAUDE.md  Dockerfile  esbuild.config.mjs  jest.config.js  nest-cli.json  package-lock.json  package.json  tsconfig.json
services/core/src/: app.module.ts  main.ts
services/core/src/admin/: admin.controller.spec.ts  admin.controller.ts  admin.module.ts  admin.service.ts
services/core/src/auth/: auth.module.ts  auth.service.ts  (+1 more)
services/notifications/: .env.example  CLAUDE.md  package.json  pyproject.toml
services/notifications/src/: app.py  subscriber.py
services/odds/: .env.example  CLAUDE.md  Dockerfile  Taskfile.yml  main.py  package.json  publisher.py  pyproject.toml  requirements.txt
services/odds/src/: app.py  auth.py  generator.py  main.py  models.py  poller.py  proto_utils.py  publisher.py  runner.py  schemas.py
services/odds/src/odds/: models.py  normalize.py  routes.py  schemas.py
services/odds/src/providers/: __init__.py  apifootball.py  base.py  common.py  mock.py  theoddsapi.py
services/odds/src/publisher/: __init__.py  base.py  dependencies.py
services/odds/src/storage/: __init__.py  base.py  dependencies.py  postgres.py
services/odds/test/: conftest.py  test_entities.py  test_leagues_endpoint.py  test_normalize.py  test_resolution.py  test_sports_endpoint.py  test_storage.py  test_transforms.py
services/stats/: .env.example  CLAUDE.md  package.json  pyproject.toml
services/stats/src/: aggregate.py  app.py  auth.py  consumer.py  db.py  routes.py  store_dep.py
services/stats/src/storage/: __init__.py  base.py  dependencies.py  postgres.py
services/stats/test/: conftest.py  test_aggregate.py  test_consumer.py  test_routes.py  test_storage.py
services/wallet/: .env.example  Dockerfile  Taskfile.yml  ledger.py  package.json  pyproject.toml  requirements.txt
services/wallet/sidecar/: index.js  package.json
services/wallet/src/: app.py  ledger.py  subscriber.py  util.py
services/wallet/tests/: conftest.py  test_ledger.py
tools/: gen-zod.mjs  protobuf_guard.sh  schema_guard.sh
(+50 files in other folders)
