[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "notifications-service"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "fastapi==0.121.2",
  "uvicorn[standard]==0.40.0",
  "python-socketio==5.16.1",
  "pyjwt[crypto]==2.10.1",
  "aio-pika==9.5.5",
  "pydantic==2.13.3",
  "pex==2.93.4",
]

[project.optional-dependencies]
dev = ["pyright", "datamodel-code-generator", "ruff"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
pythonVersion = "3.14"
include = ["src"]
strict = ["src"]
exclude = ["src/generated"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"

[tool.ruff]
extend-exclude = ["src/generated"]
