[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "odds-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "flask==3.1.3",
  "gunicorn==25.3.0",
  "aiohttp==3.13.5",
  "redis[hiredis]==7.4.0",
  "protobuf==6.33.6",
]

[project.optional-dependencies]
dev = ["mypy", "mypy-protobuf", "grpcio-tools==1.80.0"]

[tool.hatch.build.targets.wheel]
packages = []

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
